# unraid

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml  rust.yml
queries/: add_plugin.graphql  array.graphql  configure_ups.graphql  docker_containers.graphql  installed_plugins.graphql  parity_history.graphql  remove_plugin.graphql  shares.graphql  ups_configuration.graphql  ups_devices.graphql  vars_version.graphql  vms.graphql
schemas/: 7.3.1.introspection.json
src/: abi_export.rs  checks.rs  endpoint.rs  lib.rs  main.rs  registration.rs  schema_pull.rs  tools.rs  topology.rs  ups.rs  version.rs
tests/: live_unraid.rs
