[package]
name = "unraid"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "unraid"
path = "src/lib.rs"
# cdylib: the loadable plugin orca's plugin-loader `dlopen`s (-> `libunraid.so`).
# rlib: keeps the crate usable as a normal Rust dependency (tests, codegen).
crate-type = ["cdylib", "rlib"]

# Unraid GraphQL plugin. The typed client is codegenned from committed
# introspection schemas (`schemas/<version>.introspection.json`) against the
# `.graphql` query files in `queries/` — `build.rs` runs codegen through
# `plugin_toolkit_build::graphql::generate`, which rewrites every emitted
# `serde::` / `graphql_client::` path to `::plugin_toolkit::*` and anchors the
# generated serde derives, so the generated module names no external crate.
# Add a new version by dropping its introspection JSON into `schemas/`.

[dependencies]
# The SOLE dependency. Every external crate the plugin needs (serde, serde_json,
# schemars, clap, graphql_client, sha2, thiserror, anyhow, tracing, tokio, …) is
# reached through `plugin_toolkit::*` / its prelude, injected by
# `#[plugin_struct]` / `#[orca_tool]`, or rewritten into the generated GraphQL
# module by the build-time codegen. The plugin source names no external crate.
#
# Pinned to the orca rc tag that carries the plugin-toolkit surface. REQUIRES an
# rc >= the one containing the codegen path-rewrite + `plugin_toolkit::hash` +
# `graphql::GraphQLQuery` re-export (the single-dep toolkit slice). Until that rc
# is cut, the committed `[patch]` in `.cargo/config.toml` resolves these to the
# local in-tree toolkit at ../orca.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# The ONE genuine non-orca dep: `#[export_root_module]` (in `abi_export.rs`)
# expands to bare `::abi_stable` paths in this crate's root — the cdylib FFI
# boundary orca's plugin-loader `dlopen`s — so it can't route through the
# toolkit. Pinned to the orca workspace version (0.11) so the layout hash baked
# into the cdylib matches what the loader checks at load time.
abi_stable = "0.11"

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"

[build-dependencies]
plugin-toolkit-build = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
