[package]
name = "unraid"
version = "0.1.0"
edition = "2024"
description = "Adapts an Unraid host's GraphQL API into orca — typed queries, topology, schema-drift detection"
build = "build.rs"

[package.metadata.orca]
category = "infra"

[lib]
name = "unraid"
path = "src/lib.rs"
# Dynamic (subprocess) plugin: orca spawns the `[[bin]]` and drives it over the
# orca socket, so no `cdylib` artifact is emitted. `rlib` retains the in-crate
# `#[cfg(test)]` harness + lets the `[[bin]]`, the codegen build, and the
# workspace use it as a normal Rust lib.
crate-type = ["rlib"]

# The orca plugin entrypoint orca spawns and drives over the socket. `main.rs`
# is the toolkit's `serve_tool_plugin!` hybrid arm (tool surface + topology
# backend), replacing the retired cdylib `export_tool_plugin!` FFI export.
[[bin]]
name = "unraid"
path = "src/main.rs"

# Unraid GraphQL plugin. The typed client is codegenned from committed
# introspection schemas (`schemas/<version>.introspection.json`) against the
# `.graphql` query files in `queries/` — `build.rs` runs codegen through
# `plugin_toolkit_build::graphql::generate`, which rewrites every emitted
# `serde::` / `graphql_client::` path to `::plugin_toolkit::*` and anchors the
# generated serde derives, so the generated module names no external crate.
# Add a new version by dropping its introspection JSON into `schemas/`.

[dependencies]
# The SOLE dependency. Every external crate the plugin needs (serde, serde_json,
# schemars, clap, graphql_client, sha2, thiserror, anyhow, tracing, tokio, …) is
# reached through `plugin_toolkit::*` / its prelude, injected by
# `#[plugin_struct]` / `#[orca_tool]`, or rewritten into the generated GraphQL
# module by the build-time codegen. The plugin source names no external crate.
# The dynamic (subprocess) plugin names no external crate at all: retiring the
# cdylib dropped the lone `abi_stable` FFI dep, since `serve_tool_plugin!`
# reaches orca over the socket rather than across a `#[export_root_module]`
# ABI boundary.
#
# Pinned to the orca rc tag that carries the plugin-toolkit surface. REQUIRES an
# rc >= the one containing the codegen path-rewrite + `plugin_toolkit::hash` +
# `graphql::GraphQLQuery` re-export (the single-dep toolkit slice). Until that rc
# is cut, the committed `[patch]` in `.cargo/config.toml` resolves these to the
# local in-tree toolkit at ../orca.
plugin-toolkit = { git = "https://github.com/argyle-labs/orca", branch = "main" }

[dev-dependencies]
tokio    = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
tempfile = "3"
rustls   = "0.23"

[build-dependencies]
plugin-toolkit-build = { git = "https://github.com/argyle-labs/orca", branch = "main" }

# Prototype GraphQL→orca-surface generator (build/surface.rs). Walks the emitted
# query modules, pairs each operation via its `OPERATION_NAME`/`QUERY` consts,
# anchors JsonSchema/Deserialize on the operation types, and emits one
# `#[orca_tool]` per operation. The GraphQL analogue of proxmox's OpenAPI surface
# pass; lifts into plugin-toolkit-build once proven.
syn          = { version = "2", features = ["full", "extra-traits", "parsing", "printing"] }
quote        = "1"
prettyplease = "0.2"
anyhow       = "1"

# Match orca's workspace lint floor: discarding a Result/Option via
# `let _ = ...` was a load-bearing past incident, so keep it a hard error here
# too — the plugin must stay portable back into the orca workspace.
[lints.clippy]
let_underscore_must_use = "deny"
